--- a/AngularJS/01 - Intro/applications.html
+++ b/AngularJS/01 - Intro/applications.html
@@ -10,6 +10,7 @@
         Last Name: <input type="text" ng-model="lastName"><br>
         <br>
         Full Name: {{firstName + " " + lastName}}
+        <p>La caseta la tengo en {{ prueba }}</p>
 
     </div>
 
@@ -18,6 +19,7 @@
         app.controller('myCtrl', function ($scope) {
             $scope.firstName = "Felix";
             $scope.lastName = "Alvaro";
+            $scope.prueba = $scope.firstName + " hate " + $scope.lastName;
         });
     </script>
 
