--- a/AngularJS/00 - Ejercicios/Tarea 1/tareas.html
+++ b/AngularJS/00 - Ejercicios/Tarea 1/tareas.html
@@ -78,9 +78,9 @@
                         <td ng-if="tarea.check">Realizada</td>
                         <td ng-if="!tarea.check">Incompleta</td>
                         <td>
-                            <a ng-click="Editar($index)" href="" title="Editar tarea"><img src="./img/edit.png"
+                            <a ng-click="Editar($index)" href="" title="Editar tarea"><img src="./img/edit2.png"
                                     width="30" /></a>
-                            <a ng-click="Delete($index)" href="" title="Borrar tarea"><img src="./img/delete.png"
+                            <a ng-click="Delete($index)" href="" title="Borrar tarea"><img src="./img/delete2.png"
                                     width="30" /></a>
                         </td>
                     </tr>
