--- a/AngularJS/00 - Ejercicios/Tarea 1/tareas.html
+++ b/AngularJS/00 - Ejercicios/Tarea 1/tareas.html
@@ -51,7 +51,7 @@
                         <div class="divChk">
                             <!-- Realizado / Check -->
                             <input ng-model="valueCheck" ng-disabled="noEditable" type="checkbox"
-                                class="chkRealizadoEditar form-check-input">
+                                class="chkRealizadoEditar">
                             <label class="form-check-label">Realizada</label>
                         </div>
                     </div>
